<resources>

    <string name="app_name">FeatureSettings</string>
    <string name="str_status">Status bar pull down</string>
    <string name="str_navigationbar">Hide navigation bar</string>
    <string name="str_vbtn_left">Back</string>
    <string name="str_vbtn_middle">Home</string>
    <string name="str_vbtn_right">Menu</string>
    <string name="str_vbtn">Virtual key</string>
    <string name="str_lock_screen">Disable Lockscreen Key</string>
    <string name="str_auto_input_method">Input Method Editor(IME)pops up automatically</string>
    <string name="str_status_input_method">IME activates</string>
    <string name="str_disable_scankey_to_app">Show scan suspension button</string>
    <string name="str_show_scanbtn">Show scan suspension button</string>
    <string name="str_pinning_screen">Screen Pinning</string>
    <string name="str_hind_left_lockscreen">Hind shortcut on the left side of lockscreen</string>
    <string name="str_hind_right_lockscreen">Hind shortcut on the right side of lockscreen</string>
    <string name="str_ptt_action">PTT Broadcast Action</string>
    <string name="str_default_launcher">Default Launcher</string>
    <string name="str_wakeup_enable">Set Key To Wakeup Screen</string>
    <string name="str_disable_input_method">Disable Input Method</string>
    <string name="sum_status">Enable / disable the status bar drop-down function. After disabled, the function of status bar cannot be modified</string>
    <string name="sum_navigationbar">After hiding the navigation bar, swipe up the bottom of the screen to call up the navigation bar.</string>
    <string name="sum_vbtn">Enable/disable the virtual keys under the touch screen.Click is not effective.</string>
    <string name="sum_vbtn_left">Screen the virtual key on the left side of the touch screen. Click is not effective.</string>
    <string name="sum_vbtn_middle">Screen the virtual key in the middle of the touch screen. Click is not effective.</string>
    <string name="sum_vbtn_right">Screen the virtual key on the right side of the touch screen. Click is not effective.</string>
    <string name="sum_lock_screen">Screen lock button, screen lock is not locked when pressing lock screen key.</string>
    <string name="sum_auto_input_method">Enable/Disable IME pops up automatically for data entry by the user</string>
    <string name="sum_status_input_method">Disable input method with solid digital keyboard device</string>
    <string name="sum_disable_scankey_to_app">A suspension button is displayed on the screen instead of the scan button.</string>
    <string name="sum_show_scanbtn">A suspension button is displayed on the screen instead of the scan button.</string>
    <string name="sum_pinning_screen">You can use screen pinning to keep the current screen in view until you unpin.(Power+Volume up)</string>
    <string name="sum_hind_left_lockscreen">Hide the entry button on the lower left corner of the lock screen to prevent the lock screen from entering the device function.</string>
    <string name="sum_hind_right_lockscreen">Hide the entry button on the lower right corner of the lock screen to prevent the lock screen from entering the device function.</string>
    <string name="sum_ptt_action">Modify the broadcast action sent by the PTT button to realize the custom send broadcast.</string>
    <string name="sum_default_launcher">Modify the default Launcher of the system and boot to complete the selected desktop.</string>
    <string name="sum_disable_input_method">Enable/Disable IME for data entry by the user</string>
    <string name="sum_wakeup_enable">Except the "power" button, set any other button, once being pressed, to activate screen.</string>
    <string name="title_ptt">PTT Action :</string>
    <string name="okay">ok</string>
    <string name="default_app">(Default)</string>
    <string name="system_app">(System)</string>
    <string name="system_default_app">(System default)</string>
    <string name="home_work_profile_not_supported">Doesn\u2019t support work profiles</string>
    <string name="app_list_preference_none">None</string>
    <string name="dialog_title">Select Default Home</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="hint_down">down action : </string>
    <string name="hint_up">up action : </string>
    <string name="lockscreen_switch">Screen pinning</string>
    <string name="str_selec_error">Please select two buttons </string>
    <string name="str_three_screenshots">Three finger screenshots</string>
    <string name="sum_three_screenshots">Eable/disable the three finger screenshots</string>
    <string name="text_title_keycode">KeyCode:</string>
    <string name="text_title_keycode_hint"></string>
    <string name="text_title_function">  function</string>
    <string name="text_title_scan">SCAN</string>
    <string name="text_title_rfid">RFID</string>
    <string name="CheckBox1">open</string>
    <string name="str_rfid_enable">Key customization function</string>
    <string name="sum_rfid_enable">Set key trigger to scan RFID or scan</string>
    <!-- <string name="title_vbtn">Mask virtual key</string> -->
    <string name="str_telephone_record">Automatic call recording</string>
    <string name="sum_telephone_record">After enabling, all calls are automatically recorded and saved local sdcard/EnterpriseDesktop/record</string>
    <string name="title_vbtn">Virtual key switch</string>
    <string name="str_default_record_file_path">/sdcard/EnterpriseDesktop/record</string>
    <string name="str_default_record_folder_maxsize">1</string>
    <string name="text_record_attention">Note: if the maximum capacity is exceeded, the system will automatically delete the contents between them. Please pay attention to timely backup</string>
    <string name="title_folder_maxsize">Maximum folder size:</string>
    <string name="set_success">Set Successfully</string>
    <string name="str_soft_keyboard_floating_window">Soft keyboard floating window</string>
    <string name="sum_soft_keyboard_floating_window">A suspension button is displayed on the screen to turn the soft keyboard on or off</string>
    <string name="str_soft_keyboard_on">Soft keyboard on</string>
    <string name="str_soft_keyboard_off">Soft keyboard off</string>
    <string name="str_soft_keyboard_settings">软键盘禁用设置</string>
    <string name="sum_soft_keyboard_settings">设置软键盘禁用方式</string>
</resources>
